fix/fix unit test and setup

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -12,7 +12,6 @@
       "@/*": ["./src/*"]
     },
 
-    /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": true,
@@ -20,7 +19,6 @@
     "noEmit": true,
     "jsx": "react-jsx",
 
-    /* Linting */
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
@@ -28,5 +26,6 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src", "__test__"]
+  "include": ["src", "__test__", "src/vite-env.d.ts"],
+  "exclude": ["node_modules"]
 }
